--- a/public/css/dark_mode.css
+++ b/public/css/dark_mode.css
@@ -59,6 +59,9 @@ nav.filtros{
 .infoFavoritos {
     background-color: rgba(0, 0, 0, 0.75);
 }
+.editBookingTab, .editPropTab, .closeFav, .messageIcon {
+    background: rgba(0, 0, 0, 0.8);
+}
 .panelLogin{
   background: rgba(75,71,60,1);
 }
@@ -66,13 +69,13 @@ nav.filtros{
   background: rgba(120,91,66,1);
 }
 section.agregarDepto {
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.8);
 }
 section.formularioAgregar {
-    background-color: rgba(0,0,0,0.9);
+    background-color: rgba(0,0,0,1);
 }
 section.formularioEliminar {
-    background-color: rgba(0,0,0,0.9);
+    background-color: rgba(0,0,0,1);
 }
 #bookButton {
     background-color: rgba(0, 0, 0, 0.8);
