--- a/public/css/light_mode.css
+++ b/public/css/light_mode.css
@@ -23,6 +23,10 @@ footer{
 #checkBooking {
     background-color: rgba(255, 255, 255, 0.8);
 }
+#downTile2 div {
+    background: rgba(255, 255, 255, 0.8);
+}
+
 form input.buscar {
     background: rgba(255, 255, 255, 0.5);
     border-left: solid black 3px;
