--- a/public/css/style.css
+++ b/public/css/style.css
@@ -354,7 +354,7 @@ section.mapa {
 .pestana:hover {
     cursor: pointer;
 }
-.closeTab, .editBookingTab, .editPropTab, .closeFav, .messageIcon {
+.closeTab, .editBookingTab, .editPropTab, .closeFav, .messageIcon, #closeMessenger {
     margin-left: 5px;
     display: inline-block;
     font-size: 35px;
@@ -368,14 +368,10 @@ section.mapa {
     font-size: 30px;
     margin-top: 5px;
 }
-.closeTab:hover, .editBookingTab:hover, .editPropTab:hover, .messageIcon:hover, .closeFav:hover {
-    opacity: 0.5;
-    cursor: pointer;
-}
 #cancelBooking input{
     font-size: 18px;
 }
-.editBookingTab, .editPropTab, .closeFav, .messageIcon {
+.editBookingTab, .editPropTab, .closeFav, .messageIcon, #closeMessenger {
     height: 30px;
     width: 30px;
     display: inline-block;
@@ -441,6 +437,86 @@ section.mapa {
     opacity: 0;
     bottom: 0;
     margin: 0;
+    left: -100%;
+    z-index: 998;
+}
+#slideUp {
+    font-size: 40px;
+    font-family: monospace;
+    opacity: 0.3;
+    display: block;
+    height: 20px;
+    position: absolute;
+    left: 50%;
+    bottom: 30px;
+    transform: translateX(-50%);
+}
+#slideDown {
+    font-size: 40px;
+    font-family: monospace;
+    opacity: 0;
+    display: block;
+    height: 20px;
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    transform: translateX(-50%) rotate(180deg);
+}
+.propDetails {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    bottom: -100%;
+}
+.propDetails h3 {
+    margin-top: 12px;
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 0px;
+}
+.propDescription {
+    box-sizing: border-box;
+    width: 100%;
+    height: 80%;
+    position: absolute;
+    top: 10%;
+    padding: 10px;
+}
+.propEquipments {
+    display: inline-block;
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+.propEquipments h5 {
+    margin: 0px;
+    margin-bottom: 15px;
+    width: 100%;
+    text-align: center;
+}
+.descriptionColumn {
+    box-sizing: border-box;
+    height: 90%;
+    width: 33%;
+    padding: 10px;
+    display: inline-block;
+}
+.rightTab {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    height: 100%;
+    width: 10%;
+    background: black;
+}
+.propComments {
+    display: inline-block;
+    position: relative;
+    top: -101.5%;
+    right: -102.5%;
+    height: 100%;
+    width: 100%;
 }
 .profile {
     height: 30px;
@@ -449,7 +525,7 @@ section.mapa {
     position: absolute;
     left: 10px;
     top: -442px;
-    z-index: 9;
+    z-index: 999;
 }
 .ownerName {
     box-sizing: border-box;
@@ -465,6 +541,7 @@ section.mapa {
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     display: none;
+    z-index: 998;
 }
 
 .retorno {
@@ -522,10 +599,10 @@ section.mapa {
 }
 .quickMessenger {
     position: absolute;
-    top: -25%;
-    width: 100%;
-    height: 25%;
-    background: white;
+    top: -22.5%;
+    left: 2.5%;
+    width: 95%;
+    height: 22.5%;
     overflow: hidden;
 }
 .quickMessenger textarea {
@@ -541,13 +618,27 @@ section.mapa {
 #closeMessenger {
     position: absolute;
     height: 30px;
-    top: 15%;
+    top: 26.25%;
     left: 1%;
     font-size: 35px;
     opacity: 0;
-    display: block;
+    display: inline-block;
     line-height: 25px;
     overflow: hidden;
+}
+#sendQuickMessageLabel {
+    position: absolute;
+    height: 30px;
+    top: 27.5%;
+    left: 15.5%;
+    opacity: 0;
+    display: inline-block;
+    line-height: 25px;
+    overflow: hidden;
+    border-radius: 15px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    padding-top: 3px;
 }
 
 label.file, label.checkbox {
@@ -720,6 +811,7 @@ section.formularioEliminar input {
     transform: translateY(-9px);
     display: inline-block;
     z-index: 10000;
+    z-index: 999;
 }
 
 .qs-datepicker-container {
@@ -883,5 +975,13 @@ section.formularioEliminar input {
     }
     #bookPropForm section, #bookEditForm section {
         width: 600px;
+    }
+    .closeTab:hover, .editBookingTab:hover, .editPropTab:hover, .messageIcon:hover, .closeFav:hover, #closeMessenger:hover {
+        opacity: 0.5;
+        cursor: pointer;
+    }
+    #sendQuickMessageLabel:hover {
+        cursor: pointer;
+        opacity: 0.5;
     }
 }
