--- a/public/css/light_mode.css
+++ b/public/css/light_mode.css
@@ -57,6 +57,11 @@ nav.filtros{
 .propDetails {
     background: rgba(255, 255, 255, 0.9);
 }
+.propReview {
+    background: white;
+    box-shadow: 1px 1px 3px lightgray;
+    -webkit-box-shadow: 1px 1px 3px lightgray;
+}
 #middleColumn {
     border-left: 1px solid rgb(200, 200, 200);
     border-right: 1px solid rgb(200, 200, 200);
