--- a/public/css/dark_mode.css
+++ b/public/css/dark_mode.css
@@ -57,6 +57,9 @@ nav.filtros{
 .propDetails {
     background: rgba(0, 0, 0, 0.9);
 }
+.propReview {
+    background: black;
+}
 #middleColumn {
     border-left: 1px solid rgb(75, 75, 75);
     border-right: 1px solid rgb(75, 75, 75);
