--- a/public/css/style.css
+++ b/public/css/style.css
@@ -545,7 +545,9 @@ section.mapa {
     height: 80%;
     position: absolute;
     top: 10%;
-    padding: 10px;
+}
+.propDescription:hover {
+    cursor: initial;
 }
 .propEquipments {
     display: inline-block;
@@ -589,28 +591,49 @@ section.mapa {
     width: 100%;
 }
 .reviewsContainer {
-    width: 87.5%;
-    margin: auto;
+    width: 95%;
+    overflow-x: scroll;
+    margin-left: auto;
     height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    flex-direction: column;
 }
 .propReview {
     display: inline-block;
     width: 30%;
-    height: 29%;
-    background: white;
+    height: 26%;
     overflow: hidden;
     padding: 5px;
     margin: 5px;
     box-sizing: border-box;
-    box-shadow: 1px 1px 3px lightgray;
-    -webkit-box-shadow: 1px 1px 3px lightgray;
+    transition: transform 0.25s;
+}
+.propReview img {
+    height: 20px;
+    width: 20px;
+    margin-right: 5px;
+    border-radius: 15px;
+    transform: translateY(20%);
 }
 .propReview h5 {
+    display: inline-block;
     margin-bottom: 0px;
+    text-align: left;
+    line-height: 15px;
+    width: 85%;
+}
+.propReview em {
+    font-size: 13px;
+    opacity: 0.5;
+    line-height: 13px;
 }
 .reviewMessage {
     font-size: 15px;
-    opacity: 0.5;
+}
+.reviewMessage i {
+    font-style: normal;
 }
 .profile {
     height: 30px;
@@ -680,13 +703,13 @@ section.mapa {
 }
 .infoFavoritos {
     display: none;
-    position: relative;
+    position: absolute;
     z-index: 30;
-    margin-top: 60%;
+    bottom: -30px;
     padding-top: 5px;
     text-align: center;
     width: 100%;
-    height: 30%;
+    height: 90px;
     opacity: 0;
     line-height: 20px;
     box-sizing: border-box;
@@ -1129,5 +1152,16 @@ section.formularioEliminar input {
         cursor: pointer;
         opacity: 0.5;
     }
-
+    #slideRight:hover {
+        cursor: pointer;
+    }
+    #slideLeft:hover {
+        cursor: pointer;
+    }
+    .propReview:hover {
+        cursor: pointer;
+    }
+    .hoverEnlarge:hover {
+        transform: scale(1.05);
+    }
 }
