--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,6 +96,20 @@ form input,select,textarea {
 #sendAvatar {
     border: none;
     margin-bottom: 16px;
+    opacity: 0;
+    width: 1px;
+}
+#avatarPreview {
+    height: 80px;
+    width: 80px;
+    opacity: 0;
+    position: absolute;
+    top: 113px;
+    right: -100px;
+    z-index: 510;
+    background-size: cover;
+    background-position: center;
+    border-radius: 40px;
 }
 .agregarDepto form select {
     color: grey;
@@ -204,7 +218,6 @@ footer{
     transition: opacity 0.5s;
 }
 #reviewSection {
-    background: white;
     position: absolute;
     left: 0;
     top: -250px;
@@ -365,6 +378,7 @@ nav.filtros img{
 }
 
 section.mapa {
+    z-index: 1 !important;
     position: fixed;
     top: 0;
     background-size: 400%;
@@ -932,7 +946,7 @@ section.formularioEliminar input {
 }
 
 .qs-datepicker-container {
-    font-size: 1.192rem !important;
+    font-size: 1.196rem !important;
     height: 250px;
     font-family: 'Titillium Web' !important;
     border-radius: 0 !important;
@@ -941,7 +955,7 @@ section.formularioEliminar input {
     -webkit-box-shadow: none !important;
 }
 .qs-datepicker-container:first-of-type {
-    border-right: 4px solid lightgrey !important;
+    border-right: 2px solid rgba(125,125,125,0.5) !important;
 }
 .qs-datepicker .qs-controls {
     background: none !important;
@@ -1005,6 +1019,16 @@ section.formularioEliminar input {
 }
 .regularMessenger input.aceptar {
     font-size: 16px;
+}
+
+.mapboxgl-marker {
+    opacity: 0.66;
+}
+.mapboxgl-marker svg {
+    width: 20px;
+}
+circle {
+    display: none;
 }
 
 @media (min-width: 700px) {
@@ -1077,7 +1101,9 @@ section.formularioEliminar input {
     .nextBookingOk:hover {
         cursor: pointer;
     }
-
+    .downTile {
+        z-index: 100;
+    }
     #downTile2:hover {
         cursor: pointer;
     }
@@ -1163,5 +1189,9 @@ section.formularioEliminar input {
     }
     .hoverEnlarge:hover {
         transform: scale(1.05);
+    }
+    .mapboxgl-marker:hover {
+        cursor: pointer;
+        opacity: 1;
     }
 }
